open rewrite