@@ -25,17 +25,16 @@ import java.util.Enumeration;
 import java.util.List;
 import java.util.Locale;
 
-import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Required;
 import org.springframework.security.web.RedirectStrategy;
 import org.springframework.web.filter.GenericFilterBean;
 import org.springframework.web.util.CookieGenerator;
@@ -138,13 +137,11 @@ public class StorefrontFilter extends GenericFilterBean
 				|| !isSessionInitialized(session);
 	}
 
-	@Required
 	public void setStoreSessionFacade(final StoreSessionFacade storeSessionFacade)
 	{
 		this.storeSessionFacade = storeSessionFacade;
 	}
 
-	@Required
 	public void setBrowseHistory(final BrowseHistory browseHistory)
 	{
 		this.browseHistory = browseHistory;
@@ -157,7 +154,7 @@ public class StorefrontFilter extends GenericFilterBean
 		if(null!=site && null!=site.getDefaultLanguage()){
 			site.getDefaultLanguage().getIsocode();
 			List<Locale> list = new ArrayList<Locale>(1);
-			list.add(new Locale(site.getDefaultLanguage().getIsocode()));
+			list.add(Locale.of(site.getDefaultLanguage().getIsocode()));
 			storeSessionFacade.initializeSession(list);
 			storeSessionFacade.setCurrentLanguage(site.getDefaultLanguage().getIsocode());
 		}else{
@@ -201,7 +198,6 @@ public class StorefrontFilter extends GenericFilterBean
 		return cookieGenerator;
 	}
 
-	@Required
 	public void setCookieGenerator(final CookieGenerator cookieGenerator)
 	{
 		this.cookieGenerator = cookieGenerator;
