@@ -36,10 +36,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import javax.annotation.Resource;
+import jakarta.annotation.Resource;
 
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.lang.BooleanUtils;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -75,7 +75,7 @@ public class DefaultJnjCartService extends DefaultCommerceCartService implements
 	protected static final Logger LOG = Logger.getLogger(DefaultJnjCartService.class);
 
 	protected static final String CHECKOUT_TRUE_FLAG = "Y";
-	final Double DEFAULT_VALUE = new Double(0.0);
+	final Double DEFAULT_VALUE = Double.valueOf(0.0);
 
 	protected static final String DEFAULT_CATEGORY_CODE = "DefaultCategory";
 
