@@ -14,7 +14,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -29,13 +29,13 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.TimeZone;
 
-import javax.annotation.Resource;
+import jakarta.annotation.Resource;
 
-import org.apache.commons.beanutils.BeanComparator;
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.collections.comparators.ComparableComparator;
-import org.apache.commons.lang.BooleanUtils;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.beanutils2.BeanComparator;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.comparators.ComparableComparator;
+import org.apache.commons.lang3.BooleanUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.log4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.multipart.MultipartFile;
@@ -138,8 +138,6 @@ import de.hybris.platform.servicelayer.user.UserService;
 import de.hybris.platform.servicelayer.util.ServicesUtil;
 import de.hybris.platform.site.BaseSiteService;
 import de.hybris.platform.util.Config;
-
-
 
 
 /**
@@ -350,7 +348,7 @@ public class DefaultJnjGTCartService extends DefaultJnjCartService implements Jn
 		return userService;
 	}
 
-	protected final Double DEFAULT_VALUE = new Double(0.0);
+	protected final Double DEFAULT_VALUE = Double.valueOf(0.0);
 
 	@Override
 	public boolean updatePurchaseOrderNumber(final String purchaseOrderNumber)
@@ -1758,7 +1756,7 @@ public class DefaultJnjGTCartService extends DefaultJnjCartService implements Jn
 			try
 			{
 				mediaService.setStreamForMedia(mediaModel, inputStream, file.getName(),
-						Files.probeContentType(Paths.get(file.getAbsolutePath()))); //Setting the File into the Media Model
+						Files.probeContentType(Path.of(file.getAbsolutePath()))); //Setting the File into the Media Model
 				modelService.save(mediaModel);
 			}
 			catch (final MediaIOException | IllegalArgumentException | IOException mediaIOException)
@@ -1814,7 +1812,7 @@ public class DefaultJnjGTCartService extends DefaultJnjCartService implements Jn
 					inputStream = new FileInputStream(file);
 					try {
 						mediaService.setStreamForMedia(mediaModel, inputStream, file.getName(),
-								Files.probeContentType(Paths.get(file.getAbsolutePath())));
+								Files.probeContentType(Path.of(file.getAbsolutePath())));
 						modelService.save(mediaModel);
 					} catch (MediaIOException e) {
 						// TODO Auto-generated catch block
